force-app/main/default/objects/Contact_Role_Check_Setting__mdt/Contact_Role_Check_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Contact Role Check Setting</label>
    <pluralLabel>Contact Role Check Settings</pluralLabel>
</CustomObject>