force-app/main/default/objects/Contact_Role_Check_Setting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Master on/off switch for the Contact Role completeness check. When FALSE the flow exits without changing anything.</description>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>