force-app/main/default/objects/Contact_Role_Check_Setting__mdt/fields/Alert_Email__c.field-meta.xml
<CustomField>
    <fullName>Alert_Email__c</fullName>
    <description>Email address notified in real time when the Contact Role Check before-save flow faults (a save proceeded UNCHECKED). Blank = log only, no email.</description>
    <label>Fault Alert Email</label>
    <type>Email</type>
</CustomField>