force-app/main/default/objects/Contact_Role_Check_Setting__mdt/fields/Excluded_Stages__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Stages__c</fullName>
    <description>Comma-separated Opportunity Stage names that are NEVER blocked (flags are still stamped for analytics). No spaces around the commas. Example: Cancellation - Pending Review,Closed Won - Cancellation</description>
    <label>Excluded Stages (no block)</label>
    <type>Text</type>
    <length>255</length>
</CustomField>