force-app/main/default/objects/Contact_Role_Check_Setting__mdt/fields/Min_Probability__c.field-meta.xml
<CustomField>
    <fullName>Min_Probability__c</fullName>
    <description>Win-probability percent (0-100) at/above which a complete primary Contact Role is enforced. Replaces the old hardcoded 50.</description>
    <label>Min Probability</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>