force-app/main/default/objects/Contact_Role_Check_Setting__mdt/fields/Require_Account_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Require_Account_Billing_Address__c</fullName>
    <description>When TRUE, the Opportunity's Account must have Billing Street, City and Country populated (these feed billing &amp; marketing) for the role to count as complete.</description>
    <label>Require Account Billing Address</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>