force-app/main/default/objects/Contact_Role_Check_Setting__mdt/fields/Require_Email__c.field-meta.xml
<CustomField>
    <fullName>Require_Email__c</fullName>
    <description>When TRUE, the primary contact must have an Email for the role to count as complete.</description>
    <label>Require Contact Email</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>