force-app/main/default/objects/Contact_Role_Check_Setting__mdt/fields/Require_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Require_First_Name__c</fullName>
    <description>When TRUE, the primary contact must have a First Name for the role to count as complete.</description>
    <label>Require Contact First Name</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>