force-app/main/default/objects/Contact_Role_Check_Setting__mdt/fields/Require_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Require_Mailing_City__c</fullName>
    <description>When TRUE, the primary contact must have a Mailing City for the role to count as complete.</description>
    <label>Require Contact Mailing City</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>