force-app/main/default/objects/Contact_Role_Check_Setting__mdt/fields/Require_Title__c.field-meta.xml
<CustomField>
    <fullName>Require_Title__c</fullName>
    <description>When TRUE, the primary contact must have a Job Title for the role to count as complete.</description>
    <label>Require Contact Job Title</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>