force-app/main/default/objects/Contact_Role_Check_Setting__mdt/fields/Threshold_Inclusive__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Inclusive__c</fullName>
    <description>TRUE = enforce when Probability &gt;= Min Probability (at or above). FALSE = enforce only when strictly greater than.</description>
    <label>Threshold Inclusive</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>